Deployment of further fixes for mobile browsers.

--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
     <body class="mat-typography">
         <app-root></app-root>
         <noscript>Please enable JavaScript to continue using this application.</noscript>
-    <link rel="modulepreload" href="chunk-4TDNJBFX.js"><link rel="modulepreload" href="chunk-X4PWEW6Q.js"><link rel="modulepreload" href="chunk-VDEBWSLP.js"><script src="polyfills-KM26LX2Q.js" type="module"></script><script src="main-IIPZPEAC.js" type="module"></script></body>
+    <link rel="modulepreload" href="chunk-4TDNJBFX.js"><link rel="modulepreload" href="chunk-X4PWEW6Q.js"><link rel="modulepreload" href="chunk-VDEBWSLP.js"><script src="polyfills-KM26LX2Q.js" type="module"></script><script src="main-WHXWDAGS.js" type="module"></script></body>
 </html>
