--- a/index.csr.html
+++ b/index.csr.html
@@ -17,5 +17,5 @@
     <body class="mat-typography" ngcm="">
         <app-root></app-root>
         <noscript>Please enable JavaScript to continue using this application.</noscript>
-    <link rel="modulepreload" href="chunk-FCGBQB2T.js"><link rel="modulepreload" href="chunk-GXCN37EU.js"><link rel="modulepreload" href="chunk-3QXRJSGN.js"><script src="polyfills-Z7V3MEBI.js" type="module"></script><script src="main-VG7G5S7R.js" type="module"></script></body>
+    <link rel="modulepreload" href="chunk-FCGBQB2T.js"><link rel="modulepreload" href="chunk-GXCN37EU.js"><link rel="modulepreload" href="chunk-3QXRJSGN.js"><script src="polyfills-Z7V3MEBI.js" type="module"></script><script src="main-XEVWLLPX.js" type="module"></script></body>
 </html>
