--- a/index.csr.html
+++ b/index.csr.html
@@ -17,5 +17,5 @@
     <body class="mat-typography" ngcm="">
         <app-root></app-root>
         <noscript>Please enable JavaScript to continue using this application.</noscript>
-    <link rel="modulepreload" href="chunk-FCGBQB2T.js"><link rel="modulepreload" href="chunk-IWQVARB4.js"><link rel="modulepreload" href="chunk-FQYQTUSJ.js"><script src="polyfills-Z7V3MEBI.js" type="module"></script><script src="main-5ULY25Q7.js" type="module"></script></body>
+    <link rel="modulepreload" href="chunk-FCGBQB2T.js"><link rel="modulepreload" href="chunk-R2GKX7I7.js"><link rel="modulepreload" href="chunk-FQYQTUSJ.js"><script src="polyfills-Z7V3MEBI.js" type="module"></script><script src="main-KEYGLFKW.js" type="module"></script></body>
 </html>
