--- a/index.csr.html
+++ b/index.csr.html
@@ -17,5 +17,5 @@
     <body class="mat-typography" ngcm="">
         <app-root></app-root>
         <noscript>Please enable JavaScript to continue using this application.</noscript>
-    <link rel="modulepreload" href="chunk-VTH6SCAI.js"><link rel="modulepreload" href="chunk-WR7NTGDK.js"><link rel="modulepreload" href="chunk-SPQJYOVU.js"><script src="polyfills-4QQI3DU2.js" type="module"></script><script src="main-NOIAYSBF.js" type="module"></script></body>
+    <link rel="modulepreload" href="chunk-VTH6SCAI.js"><link rel="modulepreload" href="chunk-WR7NTGDK.js"><link rel="modulepreload" href="chunk-SPQJYOVU.js"><script src="polyfills-4QQI3DU2.js" type="module"></script><script src="main-TGP3QTK7.js" type="module"></script></body>
 </html>
