--- a/index.csr.html
+++ b/index.csr.html
@@ -17,5 +17,5 @@
     <body class="mat-typography" ngcm="">
         <app-root></app-root>
         <noscript>Please enable JavaScript to continue using this application.</noscript>
-    <link rel="modulepreload" href="chunk-LKXU7XCQ.js"><link rel="modulepreload" href="chunk-XXGGGQUO.js"><link rel="modulepreload" href="chunk-NB3SNQOX.js"><script src="polyfills-R24IRTYI.js" type="module"></script><script src="main-UJTKBTCV.js" type="module"></script></body>
+    <link rel="modulepreload" href="chunk-LKXU7XCQ.js"><link rel="modulepreload" href="chunk-XXGGGQUO.js"><link rel="modulepreload" href="chunk-NB3SNQOX.js"><script src="polyfills-R24IRTYI.js" type="module"></script><script src="main-GIGFXHK2.js" type="module"></script></body>
 </html>
