--- a/index.csr.html
+++ b/index.csr.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>TabataTimer</title>
-        <base href="/">
+        <base href="/tabata-timer-test/">
         <meta name="viewport" content="width=200, height=300, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
