--- a/settings/index.html
+++ b/settings/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en" data-beasties-container><head>
         <meta charset="utf-8">
         <title>TabataTimer</title>
-        <base href="/">
+        <base href="/tabata-timer-test/">
         <meta name="viewport" content="width=200, height=300, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
